--- a/client/src/styles/page/BillingAmount.module.css
+++ b/client/src/styles/page/BillingAmount.module.css
@@ -1,70 +1,3 @@
-/* .container {
-    padding-top: 7rem;
-    padding-left: 22%;
-}
-
-.checkNoBox {
-    font-family: NunitoReg;
-    width: 40%;
-    margin-left: calc(20% + 20px);
-    height: 55vh;
-    border-radius: 30px;
-    backdrop-filter: blur(100px);
-    box-shadow: 0 1px 25px rgba(0, 0, 0, 0.2);
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding: 1rem;
-    
-}
-
-
-.formContainer {
-    font-family: 'NunitoLight', sans-serif;
-    display: flex;
-    flex-direction: column;
-    
-}
-
-.formGroup {
-    margin-bottom: 15px;
-    display: flex;
-    flex-direction: column;
-}
-
-.formGroup label {
-    margin-bottom: 5px;
-}
-
-.formGroup textarea {
-    resize: none;
-}
-
-.formGroup input,
-select,
-textarea {
-    outline: none;
-    padding: 8px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.buttons {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.buttons:hover {
-    background-color: #45a049;
-} */
-
 .wrapper{
     margin-left: 24vw;
     padding-top: 2%;
@@ -75,7 +8,6 @@ textarea {
     margin-right: 5%;
     height: 80vh;
     padding: 3rem;
-    /* background-color: red; */
     border: 1px solid transparent;
     box-shadow: 0 1px 25px rgba(0, 0, 0, 0.2);
 }
@@ -86,6 +18,12 @@ textarea {
     font-weight: 100;
 }
 
+.loader_wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+}
 
 .checkNoBox {
     font-family: NunitoReg;
